# flwr-k8s

./: .gitignore  MANIFEST.in  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  example-workflow.sh  install.sh  pyproject.toml  setup.py
flwr_k8s_deploy/: __init__.py  cli.py  config.py  generator.py
flwr_k8s_deploy/templates/: .dockerignore.j2  Dockerfile.j2  build.sh.j2  configmap.yaml.j2  deploy.sh.j2  deployment.yaml.j2
